# Eldonia-Nex

./: .cursorrules  .env.example  .env.local.example  .env.production.supabase.example  .env.production.template  .gitignore  CHANGELOG.md  DEVELOPMENT_RULES.md  Dockerfile  Dockerfile.django  README.OLD.md  README.md  README_NEW.md  backend_health_latest.json  background_retry_docker.ps1  collect_health_and_logs.ps1  docker-compose.dev.yml  docker-compose.yml  docker_compose_after_recovery.txt  docker_compose_after_restart.txt  docker_compose_legacy_version.txt  docker_compose_logs.txt  docker_compose_ps.txt  docker_compose_ps_after_recovery.txt  docker_compose_ps_final.txt  docker_compose_ps_latest.txt  docker_compose_recover_after_engine.ps1  docker_compose_retry_3.txt  docker_desktop_recover.ps1  docker_info_after_restart.txt  docker_info_final.txt  docker_info_retry_1.txt  docker_info_retry_2.txt  docker_info_retry_3.txt  docker_log_tail.txt  docker_ps.txt  docker_ps_after_recovery.txt  docker_recover_result.txt  docker_recovery_report.md  docker_version_final.txt  (+24 more)
.cursor/: AGENTS.md  session-handoff.md
.githooks/: pre-commit
.vercel/: project.json
_trash/: delete_candidates.txt
agents/: Accounting.agent.md  Admin_Audit_Manager.agent.md  Auth_Agent.agent.md  Azure_IaC_Generator.agent.md  Azure_Static_Web_App.agent.md  Backend_Manager.agent.md  Community_Manager.agent.md  Database_Agent.agent.md  DeployToAzure.agent.md  DevOps_Agent.agent.md  Django_Manager.agent.md  Events_Manager.agent.md  Explore.agent.md  Fan_Notification_Manager.agent.md  Frontend_Manager.agent.md  Gallery_Manager.agent.md  Lab_Manager.agent.md  Main_Director.agent.md  Marketing_Manager.agent.md  Moderation_Safety_Manager.agent.md  Other.agent.md  Portfolio_Passport_Manager.agent.md  Product_Strategy.agent.md  Project_Producer.agent.md  Quest_Manager.agent.md  README.md  Request_Intake.agent.md  Revenue_Payment_Manager.agent.md  (+6 more)
(+902 files in other folders)
